public/css/bootstrap-custom.css
 @font-face {
   font-family: 'Glyphicons Halflings';
   
   src: url('fonts/glyphicons-halflings-regular.eot');
   src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('fonts/glyphicons-halflings-regular.woff') format('woff'), url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

.container-narrow {
    width: 800px;
}

.panel-heading-buttons h3 {
    padding-top: 7.5px;
}

.pager-lg {
    font-size: large;
}

.pager-control {
    font-size: x-large;
    padding: 4px 8px;
    cursor: pointer;
}

/* Use to collapse empty button columns */

.hideable {
    min-height: 0px;
}

label.label-switch {
    margin-top: 5px;
}

form textarea {
  resize: vertical; /* user can resize vertically, but width is fixed */
}

